@@ -19,7 +19,7 @@ define('phpAds_installing', 1);
 
 // Figure out our location
 if (strlen(__FILE__) > strlen(basename(__FILE__)))
-    define ('phpAds_path', substr(__FILE__, 0, strpos(__FILE__, 'admin') - 1));
+    define ('phpAds_path', substr(__FILE__, 0, (strlen(__FILE__) - strpos(strrev(__FILE__), strrev('admin')) - strlen('admin') - 1)));
 else
     define ('phpAds_path', '..');
 
