@@ -226,6 +226,7 @@ CVS			+ Added configuration manager  (Matteo, 2001/11/04)
 			  - 2002-04-14:  Adlayer is now IE, Mozilla and Opera compatible  (Matteo & Niels)
 			  - 2002-04-15:  Fixed no cookie / no database connection errors  (Niels)
 			  - 2002-04-16:  Not all views and clicks were displayed on the daily stats  (Niels)
+			  - 2002-04-19:  Changed phpAds_path detection  (Niels)
 
 
 v 2.0beta6.1		+ Minor speed improvements in view.inc.php  (Niels) 20011015
